# serde-sqlx

./: Cargo.toml  LICENSE.md  README.md
src/: json.rs  lib.rs  map_access.rs  seq_access.rs
tests/: 01_strings.rs  02_bool.rs  03_integer.rs  04_float.rs  05_newtype_over_primitive.rs  06_structs_with_prim_fields.rs  07_structs_with_struct_fields.rs  08_tuples_and_tuple_structs.rs  09_pg_array_as_vec.rs  09_structs_from_json.rs  10_same_type_columns_into_hashmap.rs  11_record_with_flatten.rs  12_structs_from_json.rs  13_struct.rs  deserialize.rs  util.rs
