[package]
name = "serde-sqlx"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.8.2", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "chrono",
    "json",
    "uuid",
] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
chrono = { version = "0.4.38", features = ["serde"] }
uuid = { version = "1", features = [
    "v4",
    "serde",
] }
log = "0.4.26"

[dev-dependencies]
tokio = { version = "1.36.0", features = ["full"] }
sqlx = { version = "0.8.2", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "chrono",
    "json",
    "uuid",
] }
anyhow = "1.0.97"
