[package]
name = "serde-sqlx"
description = "Allows deserializing Postgres rows into Rust types using serde"
authors = ["Vinícius R. Miguel <vini@tembo.io>"]
version = "0.0.1"
edition = "2021"
repository = "https://github.com/vrmiguel/serde-sqlx"
readme = "README.md"
license = "MIT"
keywords = ["postgres", "sqlx", "serde"]
categories = ["development-tools"]

[dependencies]
sqlx = { version = "0.8.2", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "chrono",
    "json",
    "uuid",
    "rust_decimal"
] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
chrono = { version = "0.4.38", features = ["serde"] }
uuid = { version = "1", features = [
    "v4",
    "serde",
] }
rust_decimal = "1.37.0"

[dev-dependencies]
tokio = { version = "1.36.0", features = ["full"] }
anyhow = "1.0.97"
